# rust-c-interoperability

./: .gitignore  CMakeLists.txt
C/: c_function.c  main.c
c_lib/: CMakeLists.txt
rust_lib/: Cargo.toml  build.rs
rust_lib/src/: lib.rs
